@@ -10,32 +10,27 @@ import com.thoughtworks.gauge.GaugeConstant;
 import com.thoughtworks.gauge.Logger;
 
 import javax.imageio.ImageIO;
-import java.awt.GraphicsDevice;
-import java.awt.GraphicsEnvironment;
-import java.awt.Rectangle;
-import java.awt.Robot;
+import java.awt.*;
 import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 
 /**
  * Used to take screenshots on failure.
  */
 public class ScreenshotFactory {
-
     public static final String IMAGE_EXTENSION = "png";
-    private static Class<? extends CustomScreenshot> customScreenshotGrabber;
-    private static ClassInstanceManager manager;
+    private static volatile Class<? extends CustomScreenshotWriter> customScreenshotWriter;
+
+    private final ClassInstanceManager manager;
 
     public ScreenshotFactory(ClassInstanceManager manager) {
         this.manager = manager;
     }
 
-    static void setCustomScreenshotGrabber(Class<? extends CustomScreenshot> customScreenGrabber) {
-        customScreenshotGrabber = customScreenGrabber;
+    static void setCustomScreenshotGrabber(Class<? extends CustomScreenshotWriter> writerClass) {
+        ScreenshotFactory.customScreenshotWriter = writerClass;
     }
 
     public String getScreenshotBytes() {
@@ -43,21 +38,13 @@ public class ScreenshotFactory {
     }
 
     private String takeScreenshot() {
-        if (customScreenshotGrabber != null) {
+        if (customScreenshotWriter != null) {
             try {
-                CustomScreenshot customScreenInstance = (CustomScreenshot) manager.get(customScreenshotGrabber);
-                if (customScreenInstance instanceof CustomScreenshotWriter) {
-                     return ((CustomScreenshotWriter) customScreenInstance).takeScreenshot();
-                } else {
-                    byte[] bytes = ((ICustomScreenshotGrabber) customScreenInstance).takeScreenshot();
-                    File file = generateUniqueScreenshotFile();
-                    ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
-                    BufferedImage bufferedImage = ImageIO.read(byteArrayInputStream);
-                    ImageIO.write(bufferedImage, IMAGE_EXTENSION, file);
-                    return file.getName();
+                if (manager.get(customScreenshotWriter) instanceof CustomScreenshotWriter writer) {
+                    return writer.takeScreenshot();
                 }
             } catch (Exception e) {
-                Logger.error(String.format("Failed to take Custom screenshot: %s : %s", customScreenshotGrabber.getCanonicalName(), e.getMessage()));
+                Logger.error(String.format("Failed to take Custom screenshot: %s : %s", customScreenshotWriter.getCanonicalName(), e.getMessage()));
                 Logger.warning("Capturing regular screenshot..");
             }
         }
@@ -66,7 +53,7 @@ public class ScreenshotFactory {
 
     private File generateUniqueScreenshotFile() {
         String fileName = String.format("screenshot-%s.%s", UUID.randomUUID().toString(), IMAGE_EXTENSION);
-        Path path = Paths.get(System.getenv(GaugeConstant.SCREENSHOTS_DIR_ENV), fileName);
+        Path path = Path.of(System.getenv(GaugeConstant.SCREENSHOTS_DIR_ENV), fileName);
         return new File(path.toAbsolutePath().toString());
     }
 
