@@ -9,7 +9,7 @@ package com.thoughtworks.gauge.tag;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -19,13 +19,13 @@ public class AndMatcherTest {
     @Test
     public void testIsMatch() throws Exception {
         SimpleTagMatcher matcher = new AndMatcher();
-        assertTrue(matcher.isMatch(Arrays.asList("tag1", "tag2"), Arrays.asList("tag1", "tag3", "tag4", "tag2")));
-        assertFalse(matcher.isMatch(Arrays.asList("tag1", "tag2"), Arrays.asList("tag5", "tag3", "tag4")));
-        assertFalse(matcher.isMatch(Arrays.asList("tag1"), Arrays.asList("tag5", "tag3", "tag4")));
-        assertFalse(matcher.isMatch(Arrays.asList("tag1", "tag4", "tag8", "tag9"), Arrays.asList("tag4", "tag8")));
-        assertTrue(matcher.isMatch(Arrays.asList(""), Arrays.asList("")));
+        assertTrue(matcher.isMatch(List.of("tag1", "tag2"), List.of("tag1", "tag3", "tag4", "tag2")));
+        assertFalse(matcher.isMatch(List.of("tag1", "tag2"), List.of("tag5", "tag3", "tag4")));
+        assertFalse(matcher.isMatch(List.of("tag1"), List.of("tag5", "tag3", "tag4")));
+        assertFalse(matcher.isMatch(List.of("tag1", "tag4", "tag8", "tag9"), List.of("tag4", "tag8")));
+        assertTrue(matcher.isMatch(List.of(""), List.of("")));
         assertTrue(matcher.isMatch(new ArrayList<>(), new ArrayList<>()));
-        assertFalse(matcher.isMatch(Arrays.asList("tag1", "tag3"), new ArrayList<>()));
-        assertTrue(matcher.isMatch(new ArrayList<>(), Arrays.asList("tag1", "tag2", "tag3")));
+        assertFalse(matcher.isMatch(List.of("tag1", "tag3"), new ArrayList<>()));
+        assertTrue(matcher.isMatch(new ArrayList<>(), List.of("tag1", "tag2", "tag3")));
     }
 }
